[package]
name = "diesel_hello"
version = "0.1.0"
authors = ["ytyaru <ytyaru@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["sqlite"] }
#diesel_codegen = { version = "0.16.1", features = ["sqlite"] }
dotenv = "0.14.1"
